# peek

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  install.sh  justfile  rustfmt.toml
.github/workflows/: architecture.md  ci.yml  release.yml
completions/: README.md
crates/export-engine/: Cargo.toml  README.md
crates/export-engine/src/: html.rs  json.rs  lib.rs  markdown.rs  pdf.rs  snapshot.rs
crates/export-engine/tests/: json_and_html.rs
crates/kernel-explainer/: Cargo.toml  README.md
crates/kernel-explainer/src/: capabilities.rs  lib.rs  namespaces.rs  oom.rs  scheduler.rs  signals.rs  states.rs  syscalls.rs  well_known.rs
crates/kernel-explainer/tests/: kernel_explainer_smoke.rs
crates/network-inspector/: Cargo.toml  README.md
crates/network-inspector/src/: lib.rs  resolver.rs  tcp.rs  udp.rs  unix.rs
crates/network-inspector/tests/: network_inspector_smoke.rs
crates/peek-cli/: Cargo.toml  README.md  build.rs
crates/peek-cli/src/: args.rs  cli.rs  colors.rs  main.rs  peekd_client.rs
crates/peek-cli/src/tui/: app.rs  mod.rs  port_monitor.rs  ui.rs
crates/peek-cli/src/ui/: files.rs  kernel.rs  mod.rs  network.rs  overview.rs  resources.rs  tree.rs
crates/peek-cli/tests/: cli_integration.rs
crates/peek-core/: Cargo.toml  README.md
crates/peek-core/src/: config.rs  lib.rs  ringbuf.rs
crates/peek-core/src/proc/: env.rs  files.rs  gpu.rs  kernel.rs  linux.rs  mod.rs  network.rs  resources.rs  signal.rs  sysinfo_backend.rs  tree.rs
crates/peek-core/tests/: integration.rs
crates/peek-core/tests/fixtures/: cgroup  environ  stat  statm  status
crates/peekd/: Cargo.toml  README.md  build.rs
crates/peekd/src/: alert.rs  alerts.rs  main.rs  ring_store.rs  socket.rs  watcher.rs
crates/proc-reader/: Cargo.toml  README.md
crates/proc-reader/src/: cgroup.rs  current.rs  environ.rs  error.rs  fd.rs  lib.rs  limits.rs  maps.rs  net.rs  security.rs  stat.rs  status.rs
crates/proc-reader/tests/: proc_reader_smoke.rs
crates/resource-sampler/: Cargo.toml  README.md
crates/resource-sampler/src/: cpu.rs  disk_io.rs  gpu.rs  lib.rs  memory.rs  net.rs  ring_buffer.rs
crates/signal-engine/: Cargo.toml  README.md
crates/signal-engine/src/: impact.rs  lib.rs  signals.rs  systemd.rs
docs/: architecture.md  faq.md  peekd.md  scripting.md
packaging/: PKGBUILD  README.md  peek.spec  peekd.service
packaging/debian/: changelog  control  rules
