[workspace]
members = [
    "crates/peek-cli",
    "crates/peek-core",
    "crates/peekd",
    "crates/proc-reader",
    "crates/kernel-explainer",
    "crates/resource-sampler",
    "crates/network-inspector",
    "crates/signal-engine",
    "crates/export-engine",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.79"
license = "MIT"
authors = ["Ankit <ankittkmail@gmail.com>"]
repository = "https://github.com/ankittk/peek"
readme = "README.md"
description = "The process intelligence tool for Linux"
homepage = "https://github.com/ankittk/peek"
documentation = "https://github.com/ankittk/peek"
keywords = ["process", "linux", "cli", "monitoring", "procfs"]
categories = ["command-line-utilities", "os::linux-apis"]

[workspace.dependencies]
anyhow = "1"
bytesize = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen   = "0.2"
crossterm     = { version = "0.28", features = ["event-stream"] }
nix           = { version = "0.29", features = ["signal", "process"] }
owo-colors    = "4"
procfs        = "0.17"
ratatui       = "0.28"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
sysinfo       = "0.31"
thiserror     = "2"
tokio         = { version = "1", features = ["full"] }
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which         = "6"

