[package]
name = "export-engine"
version = "0.1.0"
edition = "2021"
description = "Export and serialization engine for metrics and events produced by the Peek tool"
license = "MIT"
repository = "https://github.com/ankittk/peek"
homepage = "https://github.com/ankittk/peek"
documentation = "https://github.com/ankittk/peek"
keywords = ["process", "linux", "monitoring", "export"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
peek-core = { path = "../peek-core", version = "0.1" }
