[package]
name = "kernel-explainer"
version = "0.1.0"
edition = "2021"
description = "Kernel event and scheduling explanation library for the Peek process intelligence tool"
license = "MIT"
repository = "https://github.com/ankittk/peek"
homepage = "https://github.com/ankittk/peek"
documentation = "https://github.com/ankittk/peek"
keywords = ["process", "linux", "kernel", "monitoring"]
categories = ["command-line-utilities", "os::linux-apis"]
readme = "README.md"

[dependencies]
serde = { workspace = true }
