[package]
name = "network-inspector"
version = "0.1.0"
edition = "2021"
description = "Network connection and traffic inspection library for the Peek process intelligence tool"
license = "MIT"
repository = "https://github.com/ankittk/peek"
homepage = "https://github.com/ankittk/peek"
documentation = "https://github.com/ankittk/peek"
keywords = ["network", "linux", "monitoring"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
anyhow = { workspace = true }
dns-lookup = "1"
serde = { workspace = true }
