[package]
name = "peek-process"
version = "1.0.0"
edition = "2021"
description = "Process intelligence CLI and TUI for Linux"
license = "MIT"
repository = "https://github.com/ankittk/peek"
homepage = "https://github.com/ankittk/peek"
documentation = "https://github.com/ankittk/peek"
keywords = ["process", "linux", "cli", "monitoring", "procfs"]
categories = ["command-line-utilities", "os::linux-apis"]
readme = "README.md"

[[bin]]
name = "peek"
path = "src/main.rs"

[dependencies]
anyhow     = { workspace = true }
chrono     = { workspace = true }
clap       = { workspace = true }
owo-colors = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
peek-core  = { path = "../peek-core", version = "1.0" }
export-engine = { path = "../export-engine", version = "1.0" }
signal-engine = { path = "../signal-engine", version = "1.0" }
sysinfo    = { workspace = true }
ratatui    = { workspace = true }
crossterm  = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { workspace = true }
nix   = { workspace = true }
network-inspector = { path = "../network-inspector", version = "1.0" }

[build-dependencies]
clap          = { workspace = true }
clap_complete = { workspace = true }
clap_mangen   = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

# Packaging: cargo-deb (Debian/Ubuntu .deb)
[package.metadata.deb]
name = "peek"
section = "utils"
priority = "optional"
maintainer = "Ankit <ankittkmail@gmail.com>"
depends = []
copyright = "MIT License. See LICENSE."
assets = [
  ["target/release/peek", "usr/bin/", "755"],
]

# Packaging: cargo-generate-rpm (Fedora/RHEL .rpm)
[package.metadata.generate-rpm]
assets = [
  { source = "target/release/peek", dest = "/usr/bin/", mode = "0755" },
]