[package]
name = "peek-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sysinfo = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { workspace = true }
nix = { workspace = true }

