[package]
name = "peek-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sysinfo = { workspace = true }
proc-reader = { path = "../proc-reader" }
signal-engine = { path = "../signal-engine" }
resource-sampler = { path = "../resource-sampler" }
network-inspector = { path = "../network-inspector" }
kernel-explainer = { path = "../kernel-explainer" }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { workspace = true }
nix = { workspace = true }

