[package]
name = "peek-proc-reader"
version = "1.0.0"
edition = "2021"
description = "Linux /proc filesystem reader used by the Peek process intelligence tool"
license = "MIT"
repository = "https://github.com/ankittk/peek"
homepage = "https://github.com/ankittk/peek"
documentation = "https://github.com/ankittk/peek"
keywords = ["process", "linux", "procfs", "monitoring"]
categories = ["command-line-utilities", "os::linux-apis"]
readme = "README.md"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { workspace = true }

[dev-dependencies]
proptest = "1"
