[package]
name = "signal-engine"
version = "1.0.0"
edition = "2021"
description = "Signal impact analysis and systemd detection for the peek process intelligence tool"
license = "MIT"
repository = "https://github.com/ankittk/peek"
homepage = "https://github.com/ankittk/peek"
documentation = "https://github.com/ankittk/peek"
keywords = ["process", "linux", "monitoring"]
categories = ["command-line-utilities", "os::linux-apis"]
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
network-inspector = { path = "../network-inspector", version = "1.0" }
serde = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
